--- a/wlan/firmware/WCN1314_qcom_cfg.ini
+++ b/wlan/firmware/WCN1314_qcom_cfg.ini
@@ -4,6 +4,10 @@
 # Enable IMPS or not
 gEnableImps=1
 
+# 2012.10.29, jaeshick : from M4
+gDataInactivityTimeout=200
+gBmpsModListenInterval = 10
+
 # Enable/Disable Idle Scan 
 gEnableIdleScan=0 
 
@@ -59,7 +63,12 @@ gNthBeaconFilter=50
 # Flags to filter Mcast abd Bcast RX packets.
 # Value 0: No filtering, 1: Filter all Multicast.
 # 2: Filter all Broadcast. 3: Filter all Mcast abd Bcast
-McastBcastFilter=3
+# wcn1314 is not support DRIVER RXFILTER command: Chipset limitation Keep 2
+McastBcastFilter=2
+
+#Flags to filter Mcast DNS RX packets
+#value 0: No filtering, 1:Filtering DNS Multicast.
+mDNSMcastFilter=0
 
 #Flag to enable HostARPOffload feature or not
 hostArpOffload=1
@@ -94,7 +103,9 @@ gDisableIntraBssFwd=0
 WmmIsEnabled=0
 
 # 802.11d support
-g11dSupportEnabled=1
+# 2012.10.29, jaeshick : from M4 1 -> 0
+g11dSupportEnabled=0
+gEnableBypass11d=1
 
 # Country code
 #gAPCntryCode=USI
@@ -129,24 +140,19 @@ gApAutoChannelSelection=0
 #
 gEnablePhyAgcListenMode=128
 
+# added by jaeshick.shin@lge.com, for p2p mac address
+isP2pDeviceAddrAdministrated=1
+
+# added by jaeshick.shin@lge.com, Scan result remained scan times
+gScanResultAgeCount=2
+
+# added by jaeshick.shin@lge.com, Keep Alive Period - 55 second
+gStaKeepAlivePeriod=55
 # Display linkspeed based on RSSI by default
 gReportMaxLinkSpeed=2
 
-gDataInactivityTimeout=200
-
-gBmpsModListenInterval=10
-
-#If set will start with active scan after driver load, otherwise will start with
-#passive scan to find out the domain
-gEnableBypass11d=1
-
-# Derive P2P MAC address from primary MAC address
-isP2pDeviceAddrAdministrated=1
-
-gScanResultAgeCount=2
-
-#Enable Keep alive with non-zero period value
-gStaKeepAlivePeriod=55
+gEnableFWHeartBeatMonitoring=1
+gHeartbeat24=60
 
 END
 # Note: Configuration parser would not read anything past the END marker
