--- a/ramdisk/init.vee7.rc
+++ b/ramdisk/init.vee7.rc
@@ -142,22 +142,12 @@ on boot
     # Allow QMUX daemon to assign port open wait time
     chown radio radio /sys/devices/virtual/hsicctl/hsicctl0/modem_wait
 
-    setprop wifi.interface wlan0
 #BT_S: [PSIX-6304] L7II_KK_BRING_UP
     setprop qcom.bluetooth.soc wcn2243
     setprop persist.service.btui.use_aptx 0
 #BT_E: [PSIX-6304] L7II_KK_BRING_UP
 #donghyub.cho 121129 BT a2dp frequency issue
     setprop af.resampler.quality 255
-    # jaeshick, 2012.09.22 : Dont use ATH WLAN Driver. Must set wlan.driver.ath vlaue to 0
-    setprop wlan.driver.ath 0
-    setprop wlan.chip.vendor qcom
-    setprop wifi.supplicant_scan_interval 20
-    setprop wifi.lge.patch true
-    setprop dhcp.dlna.using false	
-    setprop wlan.lge.concurrency SCANONLY
-    setprop wlan.lge.supportsimaka YES
-    setprop wifi.lge.ftm_test 2
     # brightness properties
 	# sohyun.nam@lge.com, 2012.11.16, set default brightness from 149 for HW PP 1st
     setprop ro.lge.lcd_default_brightness 178 
@@ -330,26 +320,6 @@ on post-fs-data
     chmod 0664 /sys/class/leds/lcd-backlight/brightness
 # soung.mungi@lge.com AT/ATS refactoring [END]
 
-    # Create the directories used by the Wireless subsystem
-    # 2012.09.29, jaeshick: 770 -> 771
-    mkdir /data/misc/wifi 0771 wifi wifi
-    mkdir /data/misc/wifi/sockets 0770 wifi wifi
-    mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
-    mkdir /data/misc/dhcp 0770 dhcp dhcp
-#   chown dhcp dhcp /data/misc/dhcp
-# 2012.09.29, jaeshick: CONFIG_LGE_WLAN_PATCH - START
-# to observe dnsmasq.leases file for dhcp information of soft ap.
-	chown dhcp system /data/misc/dhcp
-
-# LGE_CHANGE_S authority change of ftm shell script, 2012.09.20, kyoohyun.kim@lge.com
-	#chown system system /system/etc/init.qcom.ftm_module.sh
-	#chown system system /system/etc/init.qcom.ftm_module_out.sh
-	#chmod 0771 /system/etc/init.qcom.ftm_module.sh
-	#chmod 0771 /system/etc/init.qcom.ftm_module_out.sh
-# LGE_CHANGE_E authority change of ftm shell script, 2012.09.20, kyoohyun.kim@lge.com
-# 2012.09.29, jaeshick: CONFIG_LGE_WLAN_PATCH - END
-
-
     # Create directory used by audio subsystem
     mkdir /data/misc/audio 0770 audio audio
 
@@ -372,7 +342,7 @@ on post-fs-data
     chown system system /sys/devices/platform/msm_sdcc.4/polling
 
 
-    # 2014.12.09 Torch perms BY WERITOS
+    # Torch perms BY WERITOS
     chown system camera /sys/devices/platform/i2c-gpio.3/i2c-3/3-0030/brightness_uA
     chmod 0777          /sys/devices/platform/i2c-gpio.3/i2c-3/3-0030/brightness_uA
 
@@ -383,10 +353,6 @@ on post-fs-data
 
     #LGE_CHANGE_E 20121015 minkyu.ha@lge.com Governor change patch for Performance
     #LGE_CHANGE_E 20121218 sangjoo78.lee@le.com improving booting time from V5
-
-    #Create the symlink to qcn wpa_supplicant folder for ar6000 wpa_supplicant
-    mkdir /data/system 0775 system system
-    symlink /data/misc/wifi/wpa_supplicant /data/system/wpa_supplicant
 
     #Create directories for wiper services
     mkdir /data/wpstiles/ 0755 shell
@@ -410,11 +376,6 @@ on post-fs-data
     #Create directory for FOTA
     mkdir /data/fota 0771
     chown system system /data/fota
-
-	#Create directory for Wi-Fi Hostapd
-	mkdir /data/hostapd 0770 system wifi
-    #Provide the access to hostapd.conf only to root and group
-    chmod 0660 /data/hostapd/hostapd.conf
 
     # Create /data/time folder for time-services
     mkdir /data/time/ 0700 system system
@@ -570,9 +531,6 @@ on property:init.svc.surfaceflinger=stopped
 
 on property:ro.board.platform=msm7630_fusion
     start usbhub_init
-
-on property:init.svc.wpa_supplicant=stopped
-    stop dhcpcd
 
 #BT_S : [PSIX-6304] QCOM BtWifiCoex
 on property:bluetooth.isEnabled=true
@@ -754,83 +712,6 @@ service amp_unload /system/bin/amploader -u
     disabled
     oneshot
 
-# LGE_CHANGE_S, [WiFi][hayun.kim@lge.com], 2013-01-22, Wifi Bring Up
-service p2p_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
-    -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf \
-    -I/system/etc/wifi/p2p_supplicant.conf -N \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
-    -I/system/etc/wifi/wpa_supplicant_overlay.conf \
-    -O/data/misc/wifi/sockets \
-    -puse_p2p_group_interface=1 -e/data/misc/wifi/entropy.bin \
-    -g@android:wpa_wlan0
-    #   we will start as root and wpa_supplicant will switch to user wifi
-    #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
-    class main
-    socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
-    oneshot
-
-service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
-    -I/system/etc/wifi/wpa_supplicant_overlay.conf \
-    -O/data/misc/wifi/sockets \
-    -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
-    #   we will start as root and wpa_supplicant will switch to user wifi
-    #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
-    class main
-    socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
-    oneshot
-
-# 2012.10.17, jaeshick : dhcp option
-# B : DHCPCD_DAEMONISE
-# K : DHCPCD_LINK
-# A : remove DHCPCD_ARP, DHCPCD_IPV4LL - IPv4LL requires ARP so remove DHCPCD_IPV4LL
-# L : remove DHCPCD_IPV4LL
-# G : DHCPCD_GATEWAY
-# a : avoid_routes = 1
-service dhcpcd_wlan0 /system/bin/dhcpcd -ABDKLG
-    class late_start
-    disabled
-    oneshot
-
-service dhcpcd_p2p /system/bin/dhcpcd -ABKLG
-    class late_start
-    disabled
-    oneshot
-
-## 2012.10.17, jaeshick: dhcp renew fail - add K option
-service iprenew_wlan0 /system/bin/dhcpcd -nK
-    class late_start
-    disabled
-    oneshot
-
-## 2012.10.17, jaeshick: dhcp renew fail - add K option
-service iprenew_p2p /system/bin/dhcpcd -nK
-    class late_start
-    disabled
-    oneshot
-
-#BT_S: [PSIX-6304] L7II_KK_BRING_UP
-service dhcpcd_bt-pan /system/bin/dhcpcd -BKLG
-    class late_start
-    disabled
-    oneshot
-
-service iprenew_bt-pan /system/bin/dhcpcd -n
-    class late_start
-    disabled
-    oneshot
-#BT_E: [PSIX-6304] L7II_KK_BRING_UP
-
-service dhcpcd_bnep0 /system/bin/dhcpcd -BKLG
-    disabled
-    oneshot
-
 service wiperiface /system/bin/wiperiface
     class late_start
     user gps
@@ -861,32 +742,12 @@ service location_mq /system/bin/location-mq
     group gps
     disabled
 
-service xtwifi_inet /system/bin/xtwifi-inet-agent
-    class late_start
-    user gps
-    group inet gps
-    disabled
-
-service xtwifi_client /system/bin/xtwifi-client
-    class late_start
-    user gps
-    group net_admin wifi inet gps
-    disabled
-
 service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
     class late_start
     user root
     group system
     disabled
     oneshot
-
-# LGE_CHANGE_S WERITOS
-	chown system system /system/etc/init.qcom.ftm_module.sh
-	chown system system /system/etc/init.qcom.ftm_module_out.sh
-	chmod 0771 /system/etc/init.qcom.ftm_module.sh
-	chmod 0771 /system/etc/init.qcom.ftm_module_out.sh
-# LGE_CHANGE_S WERITOS
-# 2012.09.29, jaeshick: CONFIG_LGE_WLAN_PATCH - END
 
 on property:crypto.driver.load=1
      insmod /system/lib/modules/qce.ko
@@ -925,12 +786,6 @@ service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
     disabled
     oneshot
 
-service wifi-sdio-on /system/bin/sh /system/etc/init.qcom.sdio.sh
-    class late_start
-    group wifi inet
-    disabled
-    oneshot
-
 on property:init.svc.bootanim=running
 	start atd
 on property:sys.boot_completed=1
@@ -952,22 +807,6 @@ service ppd /system/bin/mm-pp-daemon
     user system
     socket pps stream 0660 system system graphics
     group system graphics
-
-service hostapd /system/bin/hostapd -dd /data/hostapd/hostapd.conf
-    class late_start
-    user root
-    group root
-    oneshot
-    disabled
-
-service ds_fmc_appd /system/bin/ds_fmc_appd -p "rmnet0" -D
-    class late_start
-    group radio wifi inet
-    disabled
-    oneshot
-
-on property:persist.data.ds_fmc_app.mode=1
-    start ds_fmc_appd
 
 service ims_regmanager /system/bin/exe-ims-regmanagerprocessnative
     class late_start
@@ -1246,27 +1085,6 @@ on property:vold.sdcard_mount=0
    stop sdread	
 #LGE_CHANGE_E[satya.kamasali@lge.com]20130109
 
-
-
-## 2012.09.28, jaeshick: WIFI ftm_ptt deamon - START
-# LGE_CHANGE_S, 20110725, real-wifi@lge.com by Beaver, To enable ftm for WLAN
-# CONFIG_LGE_WLAN_PATCH
-#
-# CONFIG_LGE_WLAN_QCOM_PATCH
-service ftm_ptt /system/bin/ftm_ptt -d
-    class late_start
-    user root
-    group radio system
-    disabled
-    oneshot
-
-on property:hw.ftm_ptt_start=1
-    start ftm_ptt
-
-on property:hw.ftm_ptt_start=0
-    stop ftm_ptt
-## 2012.09.28, jaeshick: WIFI ftm_ptt deamon - END
-
 # LGE_CHANGE_S, khyun.kim@lge.com, FRST Flag Setting
 on property:sys.lgsetupwizard.status=1
     write /sys/module/lge_emmc_direct_access/parameters/frst_flag 4-5
@@ -1364,7 +1182,7 @@ on init
 
 
 # RIL permissions fix
-## 2014.12.09 Added by Weritos 
+## Added by Weritos
     chmod 0644 /proc/cmdline
 
 chmod 777 /system/bin/yepdiag
