--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -28,7 +28,7 @@
 import init.qcom.usb.rc
 import init.target.rc
 import init.lge.p713.rc
-import sensors.weritos.rc
+import init.sensors.weritos.rc
 
 on init
     # Set permissions for persist partition
